--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ django-countries==7.5.1
 django-crispy-forms==2.0
 django-unicorn==0.53.0
 docopt==0.6.2
+gunicorn==21.2.0
 idna==3.4
 numpy==1.24.4
 oauthlib==3.2.2
 orjson==3.9.4
+packaging==23.1
 Pillow==10.0.0
 pipreqs==0.4.13
 psycopg2-binary==2.9.7
